[package]
name = "ncmmiao"
version = "1.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
base64 = "0.22.*"
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.1"
hex = "0.4.3"
image = "0.25.*"
log = "0.4.20"
serde = { version = "1.0.195", features = ["derive"] }
serde_derive = "1.0.195"
serde_json = "1.0.111"
walkdir = "2.4.0"

[badges]
maintenance = { status = "actively-developed" }
